fix overflow

--- a/source/sass/blocks/advantage.scss
+++ b/source/sass/blocks/advantage.scss
@@ -65,6 +65,7 @@
 }
 
 .advantage--main {
+  padding: 20px;
   background-color: $color-blue-2;
   color: $color-default-white;
   display: flex;
